<resources>
    <string name="app_name">Shopping Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_category">Category</string>
    <string name="shopping_list">Shopping List</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
</resources>