<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_icon"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/list_icon"
            android:title="@string/shopping_list" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/shopping_cart_icon"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
<!--        <item-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
    </group>
</menu>